Jaeksoft OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.2.3

New features:
- 3366055: URLBrowser API
- 3353874: OSS could be a great sitemap generator
- 3356222: Export the search result into csv file
- 3344564: Adding Snippet Field Size and Tag from the API
- 3310490: File Crawler API
- 3310489: Web Crawler API
- 2958005: Upgrade Apache HttpClient library to 4.1.1

Bug fixes:
- 3346206: NPE when Fragmenter is set through API.
- 3323250: Invalid XML when the query includes an ampersand
- 3316826: Optimize API don't return any feedback
- 3316820: Action API returns a blank page
- 3310825: WriteAbortedException in catalina.out when Tomcat restarts
- 3310716: Index deletion and re-creation issue
- 3305045: Malformed base tag causes crawling error

OpenSearchServer 1.2.2

New features:
- 3307328: Update notification
- 3300872: Scheduler task list extensible
- 3287318: Upgrade to seleniumhq 2.x	
- 3266524: Return terms from non stored fields	
- 3266520: Cache management in Web UI
- 3253614: Upgrade to PDFBox 1.5.x
- 2973374: Upgrade to ZKoss 5.0.x
- 3213190: Negative filtering
- 3175074: Screenshot of a webpage
- 3094822: SiteMap functionnality

Bug fixes:
- 3307873: Runtime/System panel not visible
- 3290939: NPE when no default field is selected
- 3278815: The language is not detected in PDF files
- 3192429: Not the correct definition of the Russian language

OpenSearchServer 1.2.1

New features:
- 3176150: time/date stamp
- 3186042: Disable not being allowed (robots.txt)	
- 3182953: Crawl URL from a database	
- 3182950: Pattern and exclusion list deactivable
- 3182097: Adding field boost support
- 3175585: More like this feature
- 3169421: Japanese and Korean support
- 3159477: Identify identical web pages

Bug fixes:
- 3178432: Wrong cron values in the scheduler

OpenSearchServer 1.2

New features: